# actions-registry

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .test.env  DEVELOPERS.md  Dockerfile  LICENSE  Procfile  README.md  app.json  conftest.py  dotenv-sample  gunicorn.conf.py  justfile  manage.py  package-lock.json  package.json  postcss.config.js  postcss.config.mjs  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  tailwind.config.js  tailwind.config.mjs  uv-recipes-readme.md  uv-spike.md  vite.config.js  vite.config.mjs
.github/: dependabot.yml
.github/workflows/: main.yml  update_python_dependencies.yml
actions/: admin.py  asgi.py  github.py  logging.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
actions/jobs/daily/: fetch_action.py
actions/management/commands/: add.py  add_action.py  fetch_action.py  update.py  update_action.py
actions/migrations/: 0001_initial.py  0002_auto_20210713_1531.py  0003_auto_20210715_1338.py  0004_auto_20210720_1540.py  0005_alter_version_date.py  0006_alter_version_action.py  0007_remove_action_name.py  0008_rename_date_version_committed_at.py  0009_alter_action_about.py  0010_alter_version_options.py  0011_action_contributors.py  0012_action_topics.py
actions/static/css/: tailwind.css
actions/templates/: base.html
actions/templates/actions/: detail.html  index.html  version.html
actions/templates/partials/: footer.html  header.html
actions/templatetags/: markdown_filter.py  resolve_links.py
assets/src/scripts/: main.js
assets/src/styles/: main.css  main.scss
docker/: Dockerfile  dependencies.txt  docker-compose.yaml  justfile
docker/entrypoints/: dev.sh  prod.sh
registry/: settings.py  urls.py
registry/actions/: admin.py  models.py  urls.py  views.py
registry/actions/migrations/: 0001_initial.py
registry/actions/templates/: base.html
registry/actions/templates/actions/: detail.html  index.html
registry/actions/templates/partials/: header.html
registry/registry/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: setup_functions
static/: manifest.webmanifest
tests/actions/: test_fetch_action.py  test_github.py  test_models.py  test_settings.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py  test_zzz.py
