[project]
name = "actions-registry"
description = "actions-registry"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.10"

[tool.coverage.run]
branch = true
omit = [
    ".direnv/*",
    ".venv/*",
    "manage.py",
    "actions/asgi.py",
    "actions/wsgi.py",
    "actions/logging.py",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "actions.settings"
addopts = "--tb=native --ignore=node_modules"

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
