[project]
name = "actions-registry"
"version"= "1.0.0"
description = "actions-registry"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.1.7",
    "django-csp>=3.8",
    "django-permissions-policy>=4.25.0",
    "django-vite>=3.1.0",
    "environs[django]>=14.1.1",
    "gunicorn>=23.0.0",
    "osgithub>=0.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "structlog>=25.2.0",
    "whitenoise[brotli]>=6.9.0",
]

[tool.coverage.run]
branch = true
omit = [
    ".direnv/*",
    ".venv/*",
    "manage.py",
    "actions/asgi.py",
    "actions/wsgi.py",
    "actions/logging.py",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "actions.settings"
addopts = "--tb=native --ignore=node_modules"

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
isort.lines-after-imports = 2
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "A005", # ignore stdlib-module-shadowing. Would need to re-name actions.logging.
  "E501", # ignore line-length. We judge case-by-case.
]

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = ["INP001"]
"manage.py" = ["INP001"]

[dependency-groups]
dev = [
    "pip-tools>=7.4.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pyyaml>=6.0.2",
    "responses>=0.25.7",
    "ruff>=0.11.2",
]
