[project]
name = "actions-registry"
"version"= "1.0.0"
description = "actions-registry"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.10"
dependencies = [
    "bs4",
    "django",
    "django-csp",
    "django-permissions-policy",
    "django-vite",
    "environs[django]",
    "gunicorn",
    "osgithub>=0.4.0",
    "pyyaml",
    "requests",
    "structlog",
    "whitenoise[brotli]",
]

[tool.coverage.run]
branch = true
omit = [
    ".direnv/*",
    ".venv/*",
    "manage.py",
    "actions/asgi.py",
    "actions/wsgi.py",
    "actions/logging.py",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "actions.settings"
addopts = "--tb=native --ignore=node_modules"

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
isort.lines-after-imports = 2
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "A005", # ignore stdlib-module-shadowing. Would need to re-name actions.logging.
  "E501", # ignore line-length. We judge case-by-case.
]

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = ["INP001"]
"manage.py" = ["INP001"]

[dependency-groups]
dev = [
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pyyaml",
    "responses",
    "ruff",
]
